- freepops-updater-zenity added (Thanks Massimiliano Adamo) 
- updated win32 gnutls version to 2.2.5 and curl to 7.18.1
- simplified cross build using Debian equivs
- added expansion of &#XX entities in mimer.lua (thanks André Marti)
- replaced math.mod with math.fmod (the former is deprecated in lua5.1)
- use luaL_register instead of luaL_openlib (thanks Daniel Black)
- use /bin/sh in configure (thanks Spil)
- removed bad cast from fltk/main.cxx
- fixed a bug in popstate.c that was calling realloc(NULL,0)
- added yahoo.co.nz (thanks Picov)
- committed Viruzzo version of supereva, thanks Lance for reporting this version was working
- added missing cleanup for expired cookies (thanks RISKO Gergely)
17/11/2007 0.2.6
- Makefile, buildfactory/Makefile, modules/Makefile, modules/modules, modules/src/Makefile.template, modules/src/Makefile.template-contrib, modules/src/subscribed: removed luadoc, added prepare target to decompress all contrib libraries (gareuselesinge)
- buildfactory/Makefile, buildfactory/osx/iceberg/FreePOPs/FreePOPs.packproj.in: osx metadata now contains @@VERSION@@ that is replaced at build time with the actual versione number (gareuselesinge)
- buildfactory/Makefile, src/lua/monitor.lua: default win32 build is openssl, fixed monitor bugs (gareuselesinge)
- buildfactory/Makefile: added patch by blackmoon for ubuntu 6.x (gareuselesinge)
- buildfactory/Makefile: fixed makefile for dist-tgz (gareuselesinge)
- buildfactory/debian/changelog, buildfactory/debian/po/pt_BR.po: added pt_BR debian templates localization (gareuselesinge)
- buildfactory/debian/control, buildfactory/osx/Install_resources/English.lproj/ReadMe.txt, buildfactory/osx/Install_resources/Italian.lproj/ReadMe.txt, dailybuild.sh: ... (gareuselesinge)
- buildfactory/debian/control: added luadoc as build-depend-indep (gareuselesinge)
- buildfactory/openwrt/S50freepopsd, buildfactory/openwrt/freepops: script for kamikaze (gareuselesinge)