@@ -1,4 +1,5 @@
 FreePOPs core and some plugins are developed by:
+
  Enrico Tassi <gareuselesinge@users.sourceforge.net>
  Nicola Cocchiaro <ncocchiaro@users.sourceforge.net>
  Simone Vellei <simone_vellei@users.sourceforge.net>
@@ -6,15 +7,9 @@ FreePOPs core and some plugins are developed by:
  Russell Schwager <russell822@users.sourceforge.net>
 
 Really important contributions like code, plugins, translations from:
+
  Rami Kattan <rkattan@users.sourceforge.net>
  Pegasus <p3g4sus@users.sourceforge.net>
  Eddi De Pieri <dpeddi@users.sourceforge.net>
  Lisardo Bello <lisar314@users.sourceforge.net>
-
-FreePOPs is derived from LiberoPOPs, originally written by:
- Enrico Tassi <gareuselesinge@users.sourceforge.net>
- Alessio Caprari <alessiofender@users.sourceforge.net>
- Nicola Cocchiaro <ncocchiaro@users.sourceforge.net>
- Giacomo Tenaglia <sonicsmith@users.sf.net>
- Simone Vellei <simone_vellei@users.sourceforge.net>
 
