@@ -27,17 +27,3 @@ Cross compile for win32
   practice for non-home pc since running dpkg -i is enough to run arbitrary
   code as root.
 
-  [ outdated, but kept in case of fallback ]
-
-  The cross compiler can be found http://libsdl.org/extras/win32/cross/ ,
-  you should install it to /usr/local/cross-tools/
-  
-  Then checkout curl and expat modules from CVS, they contain an 
-  already build binary you should untar to / (and will put someting 
-  inside the cross compiler path) (cvs is cvs.sf.net:/cvsroot/freepops/)
-
-  Download NSIS (currently windows only) and with wine install it to
-  /usr/local/NSIS (http://nsis.sf.net)
-
-  You need unix2dos (debian sysutils), xpm2wico (debian xpm2wico),
-
