@@ -1,3 +1,5 @@
+- added Debian package freepops-updater-gnome using zenity
+- freepopsd -e updater returns 1 on failure
 - freepops-updater-zenity added (Thanks Massimiliano Adamo) 
 - updated win32 gnutls version to 2.2.5 and curl to 7.18.1
 - simplified cross build using Debian equivs
